--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,8 @@ body {
 }
 .content {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 150px;
   color: white;
 }
 .sobre {
@@ -58,7 +59,7 @@ body {
   background: #2c2c2c;
   border: 5px solid #252525;
   max-width: 430px;
-  padding: 25px 70px 20px 30px;
+  padding: 20px 70px 20px 30px;
 }
 .sobre h1::before {
   content: "";
@@ -75,7 +76,20 @@ body {
   margin-top: 140px;
 }
 .tabela h3 {
+  margin-left: 10px;
+  margin-bottom: 10px;
   font-size: 24px;
+  position: relative;
+}
+.tabela h3::before {
+  content: "";
+  display: block;
+  width: 5px;
+  height: 20px;
+  background: #d62e2e;
+  position: absolute;
+  left: -7px;
+  top: 6px;
 }
 .tabela ul {
   background: #2c2c2c;
@@ -86,9 +100,24 @@ body {
   font-weight: bold;
 }
 .tabela ul li + li {
+  border-top: 3px #252525 solid;
   padding-top: 25px;
+}
+.tabela ul li {
   padding-bottom: 25px;
-  border-top: 3px solid #252525;
+}
+.sobre-dev {
+  margin-top: 40px;
+  background: #2c2c2c;
+  border: 5px solid #252525;
+}
+.sobre-dev p {
+  background: none;
+  border: none;
+}
+.sobre-dev h2 {
+  font-size: 32px;
+  max-width: 350px;
 }
 
 /*===============INTRODUÇÃO/FIM===============*/ ;
