--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,9 @@ body {
   position: absolute;
   right:-80px;
   top:-80px;
-  overflow: hidden;
+  /* overflow: hidden; */
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 /* Projetos */
@@ -245,7 +247,6 @@ body {
   margin-bottom:150px;
 }
 .projetos-content h2{
-  font-size: 64px;
   margin-bottom:120px;
 }
 .projetos {
@@ -395,18 +396,26 @@ body {
 }
 
 /* Responsivo */
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
   .header {
     gap:40px;
+  }
+  .introducao-content h1 {
+    font-size: 42px;
   }
   .container {
     max-width:800px;
     margin: 0 auto;
   }
-  .introducao-content h1 {
-    font-size: 42px;
-  }
   .introducao-content h1::after{
     background-image: none;
+    width: 0;
+    height: 0;
   }
+  .subtitulo{
+    font-size: 38px;
+  }
+}
+@media (max-width: 750px) {
+
 }
